docs/examples/invalid/semanticErr/extension/class/sameNameInclude2.wacc
{
  include "sameNameInclude.wacc"

  class A {

  }

  skip
}
